fixed weird white space in background in index.html

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,8 @@ a:hover{
 	margin:0 auto;
 	padding:0;
 	position:relative;
-	height:100vh;
+	height:100%;
+	min-height:100vh;
 	width:100%;
 	text-align:center;
 	background-color:#c6839a;
